@@ -1,3 +1,4 @@
+* Allow move as move's origin
 * Open product quantities by warehouse to show moves
 
 Version 5.2.0 - 2019-05-06
